--- a/profile.html
+++ b/profile.html
@@ -251,7 +251,7 @@
                                 <ul>
                                     <li><b>Academy : </b> Linux Foundation</li>
                                     <li><b>Issued : </b> Aug 2019</li>
-                                    <a href="https://tinyurl.com/y4kdmarp">
+                                    <a href="https://www.youracclaim.com/badges/0b418b4b-375c-493a-b806-493a19f2b222/public_url">
                                         <li><b>See Credential</b>
                                     </a>
                                 </ul>                                    
@@ -260,7 +260,7 @@
                             <ul>
                                 <li><b>Academy : </b> IBM Institute</li>
                                 <li><b>Issued : </b> Feb 2019</li>
-                                <a href="https://tinyurl.com/y5u88r92">
+                                <a href="https://www.ibm-institute.com/certificates/diploma-in-financial-management-2/?quiz=5993&cert-nonce=766c5dd359">
                                     <li><b>See Credential</b>
                                 </a>
                             </ul>
@@ -269,7 +269,7 @@
                             <ul>
                                 <li><b>Academy : </b> IBM </li>
                                 <li><b>Issued : </b> Oct 2018</li>
-                                <a href="https://tinyurl.com/yx92yn6g">
+                                <a href="https://www.coursera.org/account/accomplishments/specialization/GUFESUWT8KTM?ranMID=40328&ranEAID=eWwXyydyhzs&ranSiteID=eWwXyydyhzs-uC2XXBv.PQ0Uz.MS3zVzzg&siteID=eWwXyydyhzs-uC2XXBv.PQ0Uz.MS3zVzzg&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=eWwXyydyhzs">
                                     <li><b>See Credential</b>
                                 </a>
                             </ul>
