--- a/profile.html
+++ b/profile.html
@@ -109,14 +109,19 @@
                 <div class="card-body">
                     <blockquote class="card-blockquote">
                         <ul>
+                            
                             <li>
                                 <p><u>Data Engineer</u></p>
-                                <p>May 2020 - Present | Cloud Ace (Thailand) Co.,Ltd</p>
+                                <p>Apr 2021 - Present | Strike Social </p>
+                            </li>
+                            <li>
+                                <p><u>Data Engineer</u></p>
+                                <p>May 2020 - Mar 2020 | Cloud Ace (Thailand) Co.,Ltd</p>
                             </li>
                             <br>
                             <li>
                                 <p><u>Software Engineer</u></p>
-                                <p>May 2019 - May 2020 | Quantera Co.,Ltd</p>
+                                <p>Apr 2019 - Apr 2020 | Quantera Co.,Ltd</p>
                             </li>
                             <br>
                             <li>
