--- a/profile.html
+++ b/profile.html
@@ -93,7 +93,7 @@
                     <ul>
                         <li>
                             <p><u>Bachelor Degree</u></p>
-                            <p>2014 - 2019 | Bachelor of Engineering, B.Eng</p>
+                            <p>2014 - 2018 | Bachelor of Engineering, (B.Eng) | Acoustics and Audio Engineering </p>
                             <p>King Mongkut's Institute Technology of Ladkrabang (KMITL)</p>
                         </li>
                     </ul>
