--- a/profile.html
+++ b/profile.html
@@ -111,7 +111,7 @@
                         <ul>
                             
                             <li>
-                                <p><u>Data Engineer</u></p>
+                                <p><u>Software Engineer</u></p>
                                 <p>Apr 2021 - Present | Strike Social </p>
                             </li>
                             <li>
