--- a/profile.html
+++ b/profile.html
@@ -265,7 +265,7 @@
                             <ul>
                                 <li><b>Academy : </b> IBM Institute</li>
                                 <li><b>Issued : </b> Feb 2019</li>
-                                <a href="https://www.ibm-institute.com/certificates/diploma-in-financial-management-2/?quiz=5993&cert-nonce=766c5dd359">
+                                    <a href="images/ibmi-finance.pdf.pdf">
                                     <li><b>See Credential</b>
                                 </a>
                             </ul>
