--- a/profile.html
+++ b/profile.html
@@ -265,7 +265,7 @@
                             <ul>
                                 <li><b>Academy : </b> IBM Institute</li>
                                 <li><b>Issued : </b> Feb 2019</li>
-                                    <a href="images/ibmi-finance.pdf.pdf">
+                                    <a href="images/ibmi-finance.pdf">
                                     <li><b>See Credential</b>
                                 </a>
                             </ul>
