--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </span>
         </a>
         &nbsp;
-        <a href="https://www.linkedin.com/in/p-srinikorn/" class="ht-tm-element btn btn-dark active">
+        <a href="https://linkedin.com/in/peem-srinikorn/" class="ht-tm-element btn btn-dark active">
           <span class="fab fa-linkedin fa-2x">
           </span>
         </a>
