--- a/profile.html
+++ b/profile.html
@@ -81,7 +81,7 @@
         <br>
         <h5 class="ht-tm-cat-title">Peem Srinikorn</h5>
         <h7 class="ht-tm-cat-title">• Software/Data Engineer</h7>  
-        <p>• Interested in Data Analytics/Engineering, Software Development, Infrastructure Design, Cloud Native, DevOps CI/CD</p>
+        <p>• Interested in Data Analytics/Engineering, Software Development, Microservices, Cloud Native, Git/MLOps</p>
         <br></br>
 
         <div class="ht-tm-codeblock ">
@@ -189,6 +189,15 @@
                 <div class="card-body">
                     <blockquote class="card-blockquote">
                         <ul>
+                            <li>AWS Certified Solutions Architect – Associate
+                                <ul>
+                                    <li><b>Academy : </b> Amazon Web Services </li>
+                                    <li><b>Issued : </b> Dec 2021</li>
+                                    <a href="https://www.credly.com/earner/earned/share/d58f0828-312e-4385-8d6c-a3c225334fad">
+                                        <li><b>See Credential</b>
+                                    </a>
+                                </ul>
+                            </li>
                             <li>Google Cloud Certified - Professional Cloud Architect
                                 <ul>
                                     <li><b>Academy : </b> Google Cloud Platform </li>
