--- a/profile.html
+++ b/profile.html
@@ -81,7 +81,35 @@
         <br>
         <h5 class="ht-tm-cat-title">Peem Srinikorn</h5>
         <h7 class="ht-tm-cat-title">• Software/Data Engineer</h7>  
-        <p>• Interested in Data Analytics/Engineering, Software Development, Microservices, Cloud Native, Git/MLOps</p>
+        <br></br>
+        <div class="ht-tm-codeblock ">
+            <div class="card ht-tm-element">
+                <div class="card-header">
+                    About
+                </div>
+                <div class="card-body">
+                    <p>
+                    I'm Peem Srinikorn. A Software/Data Engineer who has passionate in Data Engineering, Software Development, Microservices, 
+                    Git/MLOps and Cloud system. Which experienced with software development. Mainly focused in Backend system and Data engineering. 
+                    </p>
+                    <p>
+                    I was achieved the cloud certificate for both Google Cloud and AWS. e.g. GCP Data Engineer, GCP Cloud Architect and AWS Solution Architect. 
+                    </p>
+                    <p>
+                    I'm always looking for a new challenge to improve and building the software to enhance business and push the boundary of the product.
+                    </p>
+                    <p>        
+                    I started my career at the private investment platform company as a Software Engineer. I led the backbone system development, e. g. Back-end API, Data Pipeline and DevOps. 
+                    </p>
+                    <p>
+                    After that I shift my role to Data Engineer. I was working on a Cloud consulting company. Which my responsibilities involved consulting, Design Data Architecture on cloud system and Cloud native API development.
+                    </p> 
+                    <p>
+                    Currently, I work for an Advertising platform company as a Software Engineer. Which my responsibilities involved Backend API and Data Pipeline.
+                    </p>
+                </div>
+            </div>
+        </div>
         <br></br>
 
         <div class="ht-tm-codeblock ">
@@ -116,19 +144,16 @@
                             </li>
                             <li>
                                 <p><u>Data Engineer</u></p>
-                                <p>May 2020 - Mar 2021 | Cloud Ace (Thailand) Co.,Ltd</p>
+                                <p>May 2020 - Mar 2021 | Cloud Ace Co.,Ltd</p>
                             </li>
-<!--                             <br> -->
                             <li>
                                 <p><u>Software Engineer</u></p>
                                 <p>Apr 2019 - Apr 2020 | Quantera Co.,Ltd</p>
                             </li>
-<!--                             <br> -->
                             <li>
                                 <p><u>Software Developer (Part-time)</u></p>
                                 <p>Dec 2018 - Mar 2019 | Blue System Technology Co.,Ltd</p>
                             </li>
-<!--                             <br> -->
                             <li>
                                 <p><u>Acoustics Engineer (Intern) </u></p>
                                 <p>Jun 2017 - Nov 2017 | Atkrist Co.,Ltd</p>  
@@ -165,7 +190,7 @@
                             <li>Infrastructure/Cloud/Tools
                                 <ul>
                                     <li>Docker, Kubernetes </li>
-                                    <li>Google Cloud (Expert), AWS, DigitalOcean</li>
+                                    <li>Google Cloud, AWS, DigitalOcean</li>
                                     <li>Linux (Ubuntu, Debian, Alpine)</li>
                                     <li>Git, GitLab CI/CD, Jupyter, k6</li>
                                 </ul>
