--- a/profile.html
+++ b/profile.html
@@ -184,20 +184,21 @@
                                 </ul>
                             <li>Framework/Libraries
                                 <ul>
-                                    <li>Flask, FastAPI, Vue.js, Hugo, Odoo </li>
-                                    <li>Apache Beam, Apache Spark, Numpy, Pandas</li>
+                                    <li>FastAPI, Flask, Vue.js, Hugo, Odoo </li>
+                                    <li>Apache Beam, Apache Spark, Numpy, Pandas, alembic, Pydantic, SQLAlchemy, Celery</li>
                                 </ul>
                             <li>Infrastructure/Cloud/Tools
                                 <ul>
                                     <li>Docker, Kubernetes </li>
                                     <li>Google Cloud, AWS, DigitalOcean</li>
+                                    <li>Airflow, dbt</li>
+                                    <li>Git, GitLab CI/CD, GitHub Actions,Jupyter, k6</li>
                                     <li>Linux (Ubuntu, Debian, Alpine)</li>
-                                    <li>Git, GitLab CI/CD, Jupyter, k6</li>
                                 </ul>
                             </li>
                             <li>Other
                                 <ul>
-                                    <li>Data Pipeline, DevOps CI/CD, Software Development, ERP </li>
+                                    <li>Data Pipeline, DevOps, GitOps, IaC, CI/CD, Software Development, ERP, AdTech, Social Media/Marketing</li>
                                 </ul>
                             </li>
                         </ul>
@@ -214,6 +215,14 @@
                 <div class="card-body">
                     <blockquote class="card-blockquote">
                         <ul>
+                            <li>Google Cloud Certified - Authorized Trainer
+                                <ul>
+                                    <li><b>Academy : </b> Google Cloud Platform </li>
+                                    <a href="https://www.credential.net/4d3dcf72-bbfd-4d0b-bc12-eb3246cdcb6f">
+                                        <li><b>See Credential</b>
+                                    </a>
+                                </ul>
+                            </li>
                             <li>AWS Certified Solutions Architect – Associate
                                 <ul>
                                     <li><b>Academy : </b> Amazon Web Services </li>
