--- a/profile.html
+++ b/profile.html
@@ -218,6 +218,7 @@
                             <li>Google Cloud Certified - Authorized Trainer
                                 <ul>
                                     <li><b>Academy : </b> Google Cloud Platform </li>
+                                    <li><b>Issued : </b> Jun 2023</li>
                                     <a href="https://www.credential.net/4d3dcf72-bbfd-4d0b-bc12-eb3246cdcb6f">
                                         <li><b>See Credential</b>
                                     </a>
